# OpenESIM

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  autoconf.h  autoconf.mk  config.h  config.h.in  config.mk  configure  configure.ac  libtool
opendsim-core/: Makefile  Makefile.am  Makefile.in  Makefile.lib
opendsim-core/circuit/: circ-element.c  circ-node.c  circ-pin.c  circuit.c
opendsim-core/math/circ-matrix/: circmatrix.c
opendsim-core/models/: Makefile  Makefile.am  Makefile.in  mdel-lib.c
opendsim-core/models/adc/: adc.c  adc.h  adcconfig.c  adccreate.c  adcinit.c  adcstamp.c  adcvchanged.c  makefile  makefile.inc
opendsim-core/models/bjt/: bjt.c  bjt.h  bjtconfig.c  bjtinit.c  bjtstamp.c  bjtuninit.c  makefile.inc
opendsim-core/models/capacitor/: capacitor.c  capacitor.h  capacitorcreate.c  capacitoruninit.c  capacitorvchanged.c  makefile.inc
opendsim-core/models/d-and/: d-and.c  makefile.inc
opendsim-core/models/d-buff/: d-buff.c  d-buff.h  dbuffconfig.c  dbuffcreate.c  dbuffevent.c  dbuffinit.c  dbuffuninit.c  makefile.inc
opendsim-core/models/d-demux/: d-demux.c  d-demux.h  ddemuxconfig.c  ddemuxcreate.c  ddemuxevent.c  ddemuxinit.c  makefile.inc
opendsim-core/models/d-drvsrc/: d-drvsrc.c  d-drvsrc.h  ddrvsrcclock.c  ddrvsrcconfig.c  ddrvsrccreate.c  ddrvsrcevent.c  ddrvsrcinit.c  makefile.inc
opendsim-core/models/d-flipflop-delay/: d-flipflop-delay.c  d-flipflop-delay.h  dflipflopdelayconfig.c  dflipflopdelaycreate.c  dflipflopdelayevent.c  dflipflopdelayinit.c  makefile.inc
opendsim-core/models/d-flipflop-jk/: d-flipflop-jk.c  d-flipflop-jk.h  dflipflopjkconfig.c  dflipflopjkcreate.c  dflipflopjkevent.c  dflipflopjkinit.c  makefile.inc
opendsim-core/models/d-lcd8544/: d-lcd8544.c  d-lcd8544.h  dlcd8544config.c  dlcd8544create.c  dlcd8544event.c  dlcd8544init.c  dlcd8544reset.c  dlcd8544uninit.c  makefile.inc
opendsim-core/models/d-mcu-avr/: dmcuavr.c  dmcuavr.h  dmcuavrclock.c  dmcuavrconfig.c  dmcuavrcreate.c  dmcuavrevent.c  dmcuavrinit.c  dmcuavrmmcus.c  dmcuavrreset.c  dmcuavrstamp.c  dmcuavruninit.c  dmcuavrvchanged.c  makefile.inc
opendsim-core/models/d-mux/: d-mux.c  d-mux.h  dmuxconfig.c  dmuxcreate.c  dmuxevent.c  dmuxinit.c  makefile.inc
opendsim-core/models/d-or/: d-or.c  makefile.inc
opendsim-core/models/d-xor/: d-xor.c  makefile.inc
opendsim-core/models/dac/: dac.c  dac.h  dacconfig.c  daccreate.c  dacinit.c  dacmisc.c  dacstamp.c  makefile  makefile.inc
opendsim-core/models/dev/: adevconfig.c  adevcreate.c  adevstamp.cxx  adevvchanged.cxx  ddevclock.cxx  ddevcreate.c  ddevinit.cxx  ddevreset.cxx  ddevstamp.cxx  dev.c  dev.h  makefile.inc
opendsim-core/models/diode/: diode.c  diode.h  diodevchanged.c  makefile.inc
opendsim-core/models/include/: mdel-lib-internal.h  template-gate.h
opendsim-core/models/inductor/: inductor.h  inductorinit.c  makefile.inc
opendsim-core/models/logicstate/: logicstate.c  logicstate.h  logicstateconfig.c  logicstatecreate.c  logicstateevent.c  logicstateinit.c  logicstateuninit.c  makefile.inc
opendsim-core/models/mosfet/: makefile.inc  mosfet.h  mosfetconfig.c  mosfetinit.c  mosfetstamp.c  mosfetuninit.c
opendsim-core/models/node/: lib-pn.c  lib-register.c  lib-vsource.c
opendsim-core/models/opamp/: makefile  makefile.inc  opamp.c  opamp.h  opampconfig.c  opampcreate.c  opampuninit.c  opampvchanged.c
opendsim-core/models/pn/: makefile.inc  pn.c  pn.h  pnconfig.c  pncreate.c  pncurr.c  pnstamp.c  pnvchanged.c
opendsim-core/models/register/: makefile.inc  registercreate.c  registerinit.c
opendsim-core/models/vsource/: makefile.inc  vsource.c  vsourceconfig.c  vsourcecreate.c  vsourcemisc.c  vsourceuninit.c
opendsim-core/netlist/: netlist-op.c  netlist-parser.c  netlist-throw.c
opendsim-core/scheme-intr/: lisp-buffer.c  lisp-fault.c  lisp-internal.h  lisp-lexer.c  lisp-parser.c  lisp.c  lispex-units.c
opendsim-core/util/: errors.c  errors.sed  hashmap.c  list.c  logtrace.c  prime.h  rbtree.c  string.c  sys-memory.c  sys-memory.cxx
opendsim-frontend/: Makefile  Makefile.am  Makefile.edit  Makefile.in  boundingtraits.cxx  boundingtraits.h  componentgraph.cxx  componentgraphimpl.cxx  componentgraphimpl.h  componentgraphitem.cxx  componentgraphitem.h  componentlibrarydialog.cxx  componentlibrarydialog.h  componentpicktree.cxx  componentpicktree.h  componentpickwidget.cxx  componentpickwidget.h  domitem.cxx  elementabstractport.cxx  elementabstractport.h  elementarc.cxx  elementarc.h  elementbase.cxx  elementbase.h  elementbasecast.hxx  elementchord.cxx  elementchord.h  elementellipse.cxx  elementellipse.h  elementgraphitem.cxx  elementgraphitem.h  elementgraphitemfunctions.hxx  elementjoint.cxx  elementjoint.h  elementline.cxx  elementline.h  elementorigin.cxx  elementorigin.h  elementpainter.cxx  elementpainter.h  (+102 more)
opendsim-frontend/bitmaps/: greenpen.cur  greenpen.xpm  whitepen.cur
opendsim-frontend/devices/: Makefile  Makefile.am  Makefile.in  device-lib.cxx  device.cxx  propertyvalue.cxx
opendsim-frontend/devices/1n4148/: 1n4148.cxx
opendsim-frontend/devices/atmega164/: atmega164.cxx
opendsim-frontend/devices/bjt_npn/: bjt_npn.cxx
opendsim-frontend/devices/bjt_pnp/: bjt_pnp.cxx
opendsim-frontend/devices/buff/: buff.cxx
opendsim-frontend/devices/capacitor/: capacitor.cxx
opendsim-frontend/devices/demux/: demux.cxx
opendsim-frontend/devices/diode/: diode.cxx
opendsim-frontend/devices/drvsrc/: drvsrc.cxx
opendsim-frontend/devices/flipflop-delay/: flipflop-delay.cxx
opendsim-frontend/devices/include/: 1n4148.h  and.h  atmega164.h  bjt_npn.h  bjt_pnp.h  buff.h  capacitor.h  demux.h  device-lib-internal.h  diode.h  drvsrc.h  inductor.h  ks0108.h  lcdm5110.h  logicstate.h  mux.h  nand.h  nor.h  not.h  nxor.h  opamp.h  or.h  register.h  res.h  voltprobe.h  vsource-dc-0v.h  vsource-dc.h  xor.h
opendsim-frontend/devices/inductor/: inductor.cxx
opendsim-frontend/include/: domitem.h  runnable.h
opendsim-frontend/instruments/: Makefile.am  Makefile.in  instrument-lib.cxx  instrumentbase.cxx  instrumentpanel.cxx
src/: Makefile  (+38 more)
(+364 files in other folders)
